2006-09-04  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in:
	* README:
	* NEWS:
	* HACKING: Stable release 2.16.0

2006-08-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in:
	* README:
	* NEWS: Release 2.15.94

2006-08-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Post release bump to 2.15.94.

2006-08-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in:
	* README:
	* NEWS: Release 2.15.93

2006-08-08  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* README:
	* configure.in: Post release bump to 2.15.93;
	require intltool >= 0.35.0.

2006-08-08  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in:
	* README:
	* NEWS: Release 2.15.92.

2006-08-07  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Post release bump to 2.15.92.

2006-08-07  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in, README, NEWS: Release 2.15.91.

2006-08-07  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-dictionary/libgdict/gdict-speller.c:
	* gnome-screenshot/screenshot-utils:
	* logview/loglist.c:
	* logview/misc.c:
	* logview/userprefs.c: Various compilation fixes
	under the strict aliasing (#318095, Stanislav Brabec
	and Kjartan Maraas)

2006-07-29  Fabio Marzocca  <thesaltydog@gmail.com>

	* NEWS:

2006-07-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>
	
	* configure.in: Post-release bump to2.15.91.

2006-07-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* NEWS
	* README
	* configure.in: Release 2.15.90.  Require GTK >= 2.8.0.

2006-07-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Add a --enable-debug switch to turn on the
	debug messages in libgdict.

2006-06-14  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Post-release bump to 2.15.5

2006-06-12  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Post-release bump to 2.15.4

2006-06-12  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* README, NEWS, configure.in: Release 2.15.3

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>
