@@ -1,16 +1,4 @@
-icondir = ${datadir}/icons/hicolor/48x48/apps
-icon_DATA = baobab.png
-
-gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
-
-install-data-hook:
-	@-if test -z "$(DESTDIR)"; then \
-		echo "Updating Gtk icon cache."; \
-		$(gtk_update_icon_cache); \
-	else \
-		echo "*** Icon cache not updated.  After install, run this:"; \
-		echo "***   $(gtk_update_icon_cache)"; \
-	fi
+SUBDIRS = 24x24 scalable
 
 imagesdir = $(datadir)/baobab/pixmaps
 images_DATA =			\
@@ -21,7 +9,6 @@ images_DATA =			\
 	done.png		\
 	scan_directory.png	\
 	stop.png		\
-	baobab.xpm		\
 	format_numeric.png	\
 	nautilus.png		\
 	scan_harddisk.png	\
@@ -34,5 +21,4 @@ images_DATA =			\
 	yellow.png
 
 EXTRA_DIST =		\
-	$(images_DATA)	\
-	$(icon_DATA)
+	$(images_DATA)
