@@ -467,6 +467,8 @@ po/Makefile.in
 baobab/Makefile
 baobab/data/Makefile
 baobab/pixmaps/Makefile
+baobab/pixmaps/24x24/Makefile
+baobab/pixmaps/scalable/Makefile
 baobab/src/Makefile
 baobab/help/Makefile
 logview/Makefile
