@@ -1,3 +1,13 @@
+2006-09-09  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* configure.in: Add 24x24 and scalable Makefiles.
+	* baobab/pixmaps/Makefile.am: Add 24x24 and scalable
+	subdirectories.  Remove baobab.xpm and its installation.
+	* baobab/pixmaps/24x24/Makefile.am: New file.
+	* baobab/pixmaps/24x24/baobab.png:  New file.
+	* baobab/pixmaps/scalable/Makefile.am: New file.
+	* baobab/pixmaps/scalable/baobab.svg: New file.
+
 2006-09-04  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* configure.in:
